fix word wrap

--- a/css/codeception.css
+++ b/css/codeception.css
@@ -196,7 +196,6 @@ pre code {
 
 body #page code {
 	font-size: 15px;
-	white-space: pre;
 }
 
 body .highlight pre {
